--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 .bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; animation:floatY 3s infinite alternate ease-in-out; }
 .bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:26px; animation:floatY 2.8s infinite alternate ease-in-out; }
 .bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; animation:floatY 1.8s infinite alternate ease-in-out; }
-.bubble.selected { border: 4px solid #00ff00; box-shadow: 0 0 20px #00ff00, 0 0 40px #00ff00; animation: selectedPulse 0.8s infinite alternate; }
 @keyframes floatY { 0% { transform: translateY(0);} 100% { transform: translateY(-15px);} }
-@keyframes selectedPulse { 0% { transform: scale(1.1); } 100% { transform: scale(1.3); } }
 /* ================== DIFFICULTY SELECTION PANEL ================== */
 #difficultyPanel { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: rgba(10,10,10,0.95); padding: 30px; border-radius: 15px; box-shadow: 0 0 30px #d166ff; z-index: 2000; display: none; text-align: center; max-width: 80%; max-height: 80%; overflow-y: auto; }
 #difficultyPanel h2 { margin-bottom: 20px; color: #d166ff; text-transform: uppercase; }
@@ -120,184 +118,251 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 
 <div id="easterEgg"></div>
 
-<audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
+<!-- Audio element s fallback -->
+<audio id="popSound" preload="auto">
+  <source src="https://assets.mixkit.co/sfx/preview/mixkit-select-click-1109.mp3" type="audio/mpeg">
+</audio>
 
 <script>
 // ================== ELEMENTS ==================
+// NEJDŘÍV DEFINOVAT VŠECHNY ELEMENTY PŘED POUŽITÍM
 const loadingScreen = document.getElementById('loadingScreen');
-const startBtn=document.getElementById('startBtn');
-const indexBtn=document.getElementById('indexBtn');
-const indexPanel=document.getElementById('indexPanel');
-const countdownEl=document.getElementById('countdown');
-const scoreContainer=document.getElementById('scoreContainer');
-const scoreEl=document.getElementById('score');
-const highscoreEl=document.getElementById('highscore');
-const livesEl=document.getElementById('lives');
-const popSound=document.getElementById('popSound');
-const endScreen=document.getElementById('endScreen');
-const finalScoreText=document.getElementById('finalScoreText');
-const versionLabel=document.getElementById('versionLabel');
-const easterEl=document.getElementById('easterEgg');
-const closeBtn=document.querySelector('#indexPanel .closeBtn');
+const startBtn = document.getElementById('startBtn');
+const indexBtn = document.getElementById('indexBtn');
+const indexPanel = document.getElementById('indexPanel');
+const countdownEl = document.getElementById('countdown');
+const scoreContainer = document.getElementById('scoreContainer');
+const scoreEl = document.getElementById('score');
+const highscoreEl = document.getElementById('highscore');
+const livesEl = document.getElementById('lives');
+const popSound = document.getElementById('popSound');
+const endScreen = document.getElementById('endScreen');
+const finalScoreText = document.getElementById('finalScoreText');
+const versionLabel = document.getElementById('versionLabel');
+const easterEl = document.getElementById('easterEgg');
+const closeBtn = document.querySelector('#indexPanel .closeBtn');
 
-const pauseBtn=document.getElementById('pauseBtn');
-const pauseScreen=document.getElementById('pauseScreen');
-const continueGameBtn=document.getElementById('continueGameBtn');
-const endGameBtn=document.getElementById('endGameBtn');
-const continueBtn=document.getElementById('continueBtn');
+const pauseBtn = document.getElementById('pauseBtn');
+const pauseScreen = document.getElementById('pauseScreen');
+const continueGameBtn = document.getElementById('continueGameBtn');
+const endGameBtn = document.getElementById('endGameBtn');
+const continueBtn = document.getElementById('continueBtn');
 
 // Difficulty selection elements
 const difficultyPanel = document.getElementById('difficultyPanel');
 const difficultyOptions = document.querySelectorAll('.difficultyOption');
 const backBtn = document.getElementById('backBtn');
 
-let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, startTime;
-let selectedDifficulty = 'normal'; // Default difficulty
-let canSpawnBubble = true; // Kontrola pro spawnování pouze jedné bubliny
+let score = 0, highscore = 0, lives = 3, bubbles = [], gameRunning = false, gamePaused = false, startTime;
+let selectedDifficulty = 'normal';
+let canSpawnBubble = true;
 
 // Difficulty settings
 const difficultySettings = {
   easy: {
-    bubbleSpeed: 0.7,      // Pomalejší bubliny
-    spawnRate: 600,        // Méně časté spawnování
-    lives: 5               // Více životů
+    bubbleSpeed: 0.7,
+    spawnRate: 600,
+    lives: 5
   },
   normal: {
-    bubbleSpeed: 1.0,      // Současná rychlost
-    spawnRate: 500,        // Současná rychlost
-    lives: 3               // Současný počet životů
+    bubbleSpeed: 1.0,
+    spawnRate: 500,
+    lives: 3
   },
   hard: {
-    bubbleSpeed: 1.3,      // Jen o trochu rychlejší
-    spawnRate: 450,        // Jen o trochu častější
-    lives: 2               // Méně životů
+    bubbleSpeed: 1.3,
+    spawnRate: 450,
+    lives: 2
   }
 };
 
 // ================== LOADING SCREEN ==================
-window.addEventListener('load',()=>{
-  setTimeout(()=>{
-    loadingScreen.style.display='none';
-    startBtn.style.display='block';
-    indexBtn.style.display='block';
+window.addEventListener('load', function() {
+  console.log('Page loaded, starting loading screen timeout');
+  setTimeout(function() {
+    console.log('Loading screen timeout completed');
+    if (loadingScreen) {
+      loadingScreen.style.display = 'none';
+    }
+    if (startBtn) {
+      startBtn.style.display = 'block';
+    }
+    if (indexBtn) {
+      indexBtn.style.display = 'block';
+    }
     attachButtonEvents();
-  },2000);
+  }, 2000);
 });
 
 // ================== BUTTON LOGIC ==================
 function attachButtonEvents(){
-  startBtn.addEventListener('click', showDifficultySelection);
-  indexBtn.addEventListener('click',(e)=>{
-    e.stopPropagation();
-    if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
-    else { indexPanel.style.top='30%'; startBtn.style.display='none'; indexBtn.style.display='none'; }
+  if (startBtn) {
+    startBtn.addEventListener('click', showDifficultySelection);
+  }
+  if (indexBtn) {
+    indexBtn.addEventListener('click', function(e){
+      e.stopPropagation();
+      if (indexPanel.style.top === '30%') {
+        indexPanel.style.top = '100%';
+        if (startBtn) startBtn.style.display = 'block';
+        if (indexBtn) indexBtn.style.display = 'block';
+      } else {
+        indexPanel.style.top = '30%';
+        if (startBtn) startBtn.style.display = 'none';
+        if (indexBtn) indexBtn.style.display = 'none';
+      }
+    });
+  }
+  
+  if (closeBtn) {
+    closeBtn.addEventListener('click', function(e){
+      e.stopPropagation();
+      indexPanel.style.top = '100%';
+      if (startBtn) startBtn.style.display = 'block';
+      if (indexBtn) indexBtn.style.display = 'block';
+    });
+  }
+  
+  document.body.addEventListener('click', function(){
+    if (indexPanel && indexPanel.style.top === '30%') {
+      indexPanel.style.top = '100%';
+      if (startBtn) startBtn.style.display = 'block';
+      if (indexBtn) indexBtn.style.display = 'block';
+    }
   });
-  closeBtn.addEventListener('click',(e)=>{ e.stopPropagation(); indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; });
-  document.body.addEventListener('click',()=>{
-    if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
-  });
-  continueBtn.addEventListener('click',()=>{
-    endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block'; versionLabel.style.display='block';
-  });
-  pauseBtn.addEventListener('click', togglePause);
-  continueGameBtn.addEventListener('click', togglePause);
-  endGameBtn.addEventListener('click', endGame);
+  
+  if (continueBtn) {
+    continueBtn.addEventListener('click', function(){
+      if (endScreen) endScreen.style.display = 'none';
+      if (startBtn) startBtn.style.display = 'block';
+      if (indexBtn) indexBtn.style.display = 'block';
+      if (versionLabel) versionLabel.style.display = 'block';
+    });
+  }
+  
+  if (pauseBtn) {
+    pauseBtn.addEventListener('click', togglePause);
+  }
+  if (continueGameBtn) {
+    continueGameBtn.addEventListener('click', togglePause);
+  }
+  if (endGameBtn) {
+    endGameBtn.addEventListener('click', endGame);
+  }
   
   // Difficulty selection events
-  difficultyOptions.forEach(option => {
-    option.addEventListener('click', () => {
-      difficultyOptions.forEach(opt => opt.classList.remove('selected'));
-      option.classList.add('selected');
-      selectedDifficulty = option.dataset.difficulty;
-      startCountdown();
+  if (difficultyOptions) {
+    difficultyOptions.forEach(option => {
+      option.addEventListener('click', function() {
+        difficultyOptions.forEach(opt => opt.classList.remove('selected'));
+        option.classList.add('selected');
+        selectedDifficulty = option.dataset.difficulty;
+        startCountdown();
+      });
     });
-  });
+  }
   
-  backBtn.addEventListener('click', () => {
-    difficultyPanel.style.display = 'none';
-    startBtn.style.display = 'block';
-    indexBtn.style.display = 'block';
-    versionLabel.style.display = 'block';
-  });
+  if (backBtn) {
+    backBtn.addEventListener('click', function() {
+      if (difficultyPanel) difficultyPanel.style.display = 'none';
+      if (startBtn) startBtn.style.display = 'block';
+      if (indexBtn) indexBtn.style.display = 'block';
+      if (versionLabel) versionLabel.style.display = 'block';
+    });
+  }
 }
 
 // ================== DIFFICULTY SELECTION ==================
 function showDifficultySelection() {
-  startBtn.style.display = 'none';
-  indexBtn.style.display = 'none';
-  versionLabel.style.display = 'none';
-  difficultyPanel.style.display = 'block';
+  if (startBtn) startBtn.style.display = 'none';
+  if (indexBtn) indexBtn.style.display = 'none';
+  if (versionLabel) versionLabel.style.display = 'none';
+  if (difficultyPanel) difficultyPanel.style.display = 'block';
   
   // Reset selection
-  difficultyOptions.forEach(opt => opt.classList.remove('selected'));
-  difficultyOptions[1].classList.add('selected'); // Select Normal by default
+  if (difficultyOptions) {
+    difficultyOptions.forEach(opt => opt.classList.remove('selected'));
+    if (difficultyOptions[1]) {
+      difficultyOptions[1].classList.add('selected');
+    }
+  }
   selectedDifficulty = 'normal';
 }
 
 // ================== COUNTDOWN ==================
 function startCountdown(){
-  difficultyPanel.style.display = 'none';
-  countdownEl.style.display='block';
-  let count=3;
-  countdownEl.textContent=count;
-  const interval=setInterval(()=>{
+  if (difficultyPanel) difficultyPanel.style.display = 'none';
+  if (countdownEl) countdownEl.style.display = 'block';
+  let count = 3;
+  if (countdownEl) countdownEl.textContent = count;
+  
+  const interval = setInterval(function() {
     count--;
-    if(count>0) countdownEl.textContent=count;
-    else{
+    if (count > 0 && countdownEl) {
+      countdownEl.textContent = count;
+    } else {
       clearInterval(interval);
-      countdownEl.style.display='none';
-      scoreContainer.style.display='block';
-      pauseBtn.style.display='block';
+      if (countdownEl) countdownEl.style.display = 'none';
+      if (scoreContainer) scoreContainer.style.display = 'block';
+      if (pauseBtn) pauseBtn.style.display = 'block';
       startGame();
     }
-  },1000);
+  }, 1000);
 }
 
 // ================== GAME LOGIC ==================
 function startGame(){
-  score=0; 
+  score = 0;
   canSpawnBubble = true;
   
-  // Set game parameters based on selected difficulty
   const settings = difficultySettings[selectedDifficulty];
   lives = settings.lives;
   
-  bubbles=[]; 
-  gameRunning=true; 
-  gamePaused=false; 
-  startTime=Date.now();
+  bubbles = [];
+  gameRunning = true;
+  gamePaused = false;
+  startTime = Date.now();
   
-  scoreEl.textContent="Skóre: "+score; 
-  livesEl.textContent="Životy: "+lives;
+  if (scoreEl) scoreEl.textContent = "Skóre: " + score;
+  if (livesEl) livesEl.textContent = "Životy: " + lives;
   
   spawnBubble();
   requestAnimationFrame(updateBubbles);
 }
 
 function togglePause(){
-  if(!gameRunning) return;
+  if (!gameRunning) return;
   gamePaused = !gamePaused;
-  if(gamePaused){
-    pauseScreen.classList.remove('fadeOut'); pauseScreen.classList.add('fadeIn'); pauseScreen.style.display='flex';
-  } else{
-    pauseScreen.classList.remove('fadeIn'); pauseScreen.classList.add('fadeOut'); setTimeout(()=> pauseScreen.style.display='none',500);
+  if (gamePaused) {
+    if (pauseScreen) {
+      pauseScreen.classList.remove('fadeOut');
+      pauseScreen.classList.add('fadeIn');
+      pauseScreen.style.display = 'flex';
+    }
+  } else {
+    if (pauseScreen) {
+      pauseScreen.classList.remove('fadeIn');
+      pauseScreen.classList.add('fadeOut');
+      setTimeout(function() {
+        if (pauseScreen) pauseScreen.style.display = 'none';
+      }, 500);
+    }
   }
 }
 
 // ================== UPDATE BUBBLES ==================
 function updateBubbles(){
-  if(!gameRunning) return;
-  if(!gamePaused){
-    bubbles.forEach(bubble=>{
-      const top=parseFloat(bubble.style.top);
-      const settings = difficultySettings[selectedDifficulty];
-      bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-      if(top<=0){  
-        lives--; 
-        livesEl.textContent="Životy: "+lives;
-        bubble.remove(); 
-        bubbles=bubbles.filter(b=>b!==bubble);  
-        if(lives<=0) endGame();
+  if (!gameRunning) return;
+  if (!gamePaused) {
+    bubbles.forEach(bubble => {
+      const top = parseFloat(bubble.style.top);
+      bubble.style.top = top - parseFloat(bubble.dataset.speed) + 'px';
+      if (top <= 0) {
+        lives--;
+        if (livesEl) livesEl.textContent = "Životy: " + lives;
+        bubble.remove();
+        bubbles = bubbles.filter(b => b !== bubble);
+        if (lives <= 0) endGame();
       }
     });
   }
@@ -305,44 +370,38 @@ function updateBubbles(){
 }
 
 // ================== SPAWN BUBBLES ==================
-function spawnBubble(){ 
-  if(!gameRunning || gamePaused || !canSpawnBubble) { 
+function spawnBubble() {
+  if (!gameRunning || gamePaused || !canSpawnBubble) {
     const settings = difficultySettings[selectedDifficulty];
-    setTimeout(spawnBubble, settings.spawnRate); 
-    return; 
+    setTimeout(spawnBubble, settings.spawnRate);
+    return;
   }
   
-  canSpawnBubble = false; // Zabrání spawnování další bubliny
+  canSpawnBubble = false;
   
-  const elapsed=(Date.now()-startTime)/1000; 
+  const elapsed = (Date.now() - startTime) / 1000;
   const settings = difficultySettings[selectedDifficulty];
-  const speedMultiplier=settings.bubbleSpeed + elapsed/120; 
-  const chance=Math.random();
+  const speedMultiplier = settings.bubbleSpeed + elapsed / 120;
+  const chance = Math.random();
   
-  const bubble=document.createElement('div'); 
+  const bubble = document.createElement('div');
   bubble.classList.add('bubble');
   
-  if(chance<=0.001){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
-  else if(chance<=0.016){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
-  else if(chance<=0.0185){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
-  else if(chance<=0.0285){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
-  else if(chance<=0.0485){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
-  else if(chance<=0.0785){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
-  else { bubble.textContent="12"; bubble.dataset.type="normal"; }
-
-  const size=Math.random()*60+60; 
-  bubble.style.width=size+'px'; 
-  bubble.style.height=size+'px';
-  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
-  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
-  bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
-  document.body.appendChild(bubble);
-
-  const pop=()=>{
-    if(!gameRunning) return;
-    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0, popSound.play();
-    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
-    
-    if(bubble.dataset.type==="2x") score*=2;
-    else if(bubble.dataset.type==="144") score+=144
+  if (chance <= 0.001) {
+    bubble.classList.add('instawin');
+    bubble.textContent = "?12?";
+    bubble.dataset.type = "instawin";
+  } else if (chance <= 0.016) {
+    bubble.classList.add('invert');
+    bubble.textContent = "!12!";
+    bubble.dataset.type = "invert";
+  } else if (chance <= 0.0185) {
+    bubble.classList.add('rare2x');
+    bubble.textContent = "12×2";
+    bubble.dataset.type = "2x";
+  } else if (chance <= 0.0285) {
+    bubble.classList.add('rare144');
+    bubble.textContent = "12²";
+    bubble.dataset.type = "144";
+  } else if (chance <= 0.0485) {
+  
